public class ClienteKlondike {
    public static void main(String[] args) {

        Klondike klondike = new Klondike();
        klondike.jugar();
    }
}