
public class Carta {

        public Object voltear() {
                // TODO Auto-generated method stub
                throw new UnsupportedOperationException("Unimplemented method 'voltear'");
        }

        public Object palo() {
                // TODO Auto-generated method stub
                throw new UnsupportedOperationException("Unimplemented method 'palo'");
        }

        public int valor() {
                // TODO Auto-generated method stub
                throw new UnsupportedOperationException("Unimplemented method 'valor'");
        }

        public boolean isAs() {
                // TODO Auto-generated method stub
                throw new UnsupportedOperationException("Unimplemented method 'isAs'");
        }

        public void imprimir() {
                // TODO Auto-generated method stub
                throw new UnsupportedOperationException("Unimplemented method 'imprimir'");
        }

}
